...
            }, label: {
                HStack {
                    Image(Asset.tasksIcon.name)
                    Text("Add Tasks")
                        .font(.nunitoSemiBold(size: 16))
                        .foregroundColor(Color(Asset.textPrimary.name))
                        .accessibilityIdentifier("txt_create_note_popover_add_task")
                }
            })
            .accessibilityIdentifier("btn_create_note_popover_add_task")
            .contentShape(Rectangle())
            
            Button(action: {
                suggestionId = UUID().uuidString
                createNoteScreenViewModel.initEventData(suggestion: EventSuggestionStruct(id: suggestionId, description: ""))
                addEventActivated = true
...
